move image to project folder

--- a/static/pages/autodesk.html
+++ b/static/pages/autodesk.html
@@ -101,7 +101,7 @@
                                 Software as a service (SaaS) was still a new topic when we did this project. To identify the standard features and some best practices, I started the project by competitive analysis. There were 3 indirect competitors: Adobe creative cloud, App Store (Apple), Google Play Store.  They all solve the same problem as what we wanted to solve but serves different customers.
                             </p>
 
-                            <img src="../img/autodesk_competitive_analysis.png"/>
+                            <img src="../img/autodesk/autodesk_competitive_analysis.png"/>
         
                             <h5>User Research</h5>
                             <p>
@@ -122,7 +122,7 @@
                     <div class="row m-3rem-t">
                         <div class="w-100"></div>
                         <div class="col-lg-7">
-                            <img src="../img/autodesk_sketch.png">
+                            <img src="../img/autodesk/autodesk_sketch.png">
                         </div>
                         <div class="offset-lg-1 col-lg-4">
                             <h5>Expandable Card</h5>
@@ -153,13 +153,13 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-4">
-                            <img src="../img/autodesk_card_expand.gif">
+                            <img src="../img/autodesk/autodesk_card_expand.gif">
                         </div>
                         <div class="col-lg-4">
-                            <img src="../img/autodesk_learn_more.gif">
+                            <img src="../img/autodesk/autodesk_learn_more.gif">
                         </div>
                         <div class="col-lg-4">
-                            <img src="../img/autodesk_progress_with_states.gif">
+                            <img src="../img/autodesk/autodesk_progress_with_states.gif">
                         </div>
                     </div>
                 </div>
