--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -156,8 +156,8 @@
                     <div class="row justify-content-center m-2rem-t">
                         <div class="col">
                             <picture>
-                                <source srcset="../img/docs.png" media="(min-width: 576px)">
-                                <img src="../img/docs_sm.png" alt="screenshot of some of the analysis docs">
+                                <source srcset="../img/esplanade/docs.png" media="(min-width: 576px)">
+                                <img src="../img/esplanade/docs_sm.png" alt="screenshot of some of the analysis docs">
                             </picture>
                         </div>
                     </div>
@@ -251,7 +251,7 @@
                     <div class="row m-3rem-t">
                         <div class="w-100"></div>
                         <div class="col-lg-7">
-                            <img src="../img/nav_redesign.png">
+                            <img src="../img/esplanadenav_redesign.png">
                         </div>
                         <div class="offset-lg-1 col-lg-4">
                             <h5>New Navigation Bar & Mega Menu</h5>
@@ -285,13 +285,13 @@
                             </div>
                         </div>
                         <div class="offset-lg-1 col-lg-6">
-                            <img src="../img/card_redesign.png">
+                            <img src="../img/esplanade/card_redesign.png">
                         </div>
                     </div>
                     <div class="row m-3rem-t">
                         <div class="w-100"></div>
                         <div class="col-lg-7">
-                            <img src="../img/filter_redesign.png">
+                            <img src="../img/esplanade/filter_redesign.png">
                         </div>
                         <div class="offset-lg-1 col-lg-4">
                             <h5>New Filters </h5>
@@ -322,7 +322,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <img src="../img/mobile.png"/>
+                            <img src="../img/esplanade/mobile.png"/>
                         </div>
                     </div>
                     <div class="row">
