--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-lg-10">
-                            <img class="m-2rem-t " src="../img/zalora_process.png"/>
+                            <img class="m-2rem-t " src="../img/zalora/zalora_process.png"/>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                     </div>
                     <div class="row m-3rem-t">
                         <div class="col">
-                            <img src="../img/zalora_docs.png"/>
+                            <img src="../img/zalora/zalora_docs.png"/>
                         </div>
                     </div>
                 </div>
