fix mobile style

--- a/index.html
+++ b/index.html
@@ -148,6 +148,14 @@
             <section id="projects_esplanade">
                 <div class="container">
                     <div class="row">
+                        <div class="col-lg-5 offset-lg-1 order-lg-last">
+                            <div class="project-img">
+                                <a class="project-img-depth" href="static/pages/esplanade.html">
+                                    <img src="static/img/esplanade/cover_1.png" alt="bg">
+                                    <img src="static/img/esplanade/cover_2.png" alt="product image">
+                                </a>
+                            </div>
+                        </div>
                         <div class="col-lg-6">
                             <small>Concept Project</small>
                             <h3 class="m-0rem-t m-1rem-b">Esplanade Website Redesign</h3>
@@ -159,14 +167,6 @@
                                 Read More
                                 <svg class="icon"><use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use></svg>
                             </a>
-                        </div>
-                        <div class="col-lg-5 offset-lg-1">
-                            <div class="project-img">
-                                <a class="project-img-depth" href="static/pages/esplanade.html">
-                                    <img src="static/img/esplanade/cover_1.png" alt="bg">
-                                    <img src="static/img/esplanade/cover_2.png" alt="product image">
-                                </a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -200,6 +200,14 @@
             <section id="projects_huemail">
                 <div class="container">
                     <div class="row">
+                        <div class="col-lg-5 offset-lg-1 order-lg-last">
+                            <div class="project-img">
+                                <a class="project-img-depth" href="static/pages/zalora.html">
+                                    <img src="static/img/huemail/cover_1.png" alt="bg">
+                                    <img src="static/img/huemail/cover_2.png" alt="product image">
+                                </a>
+                            </div>
+                        </div>
                         <div class="col-lg-6">
                             <small>Released Enterprise Web Application</small>
                             <h3 class="m-0rem-t m-1rem-b">Security Features</h3>
@@ -212,14 +220,6 @@
                                 Read More
                                 <svg class="icon"><use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use></svg>
                             </a>
-                        </div>
-                        <div class="col-lg-5 offset-lg-1">
-                            <div class="project-img">
-                                <a class="project-img-depth" href="static/pages/zalora.html">
-                                    <img src="static/img/huemail/cover_1.png" alt="bg">
-                                    <img src="static/img/huemail/cover_2.png" alt="product image">
-                                </a>
-                            </div>
                         </div>
                     </div>
                 </div>
