--- a/static/pages/openpo.html
+++ b/static/pages/openpo.html
@@ -79,7 +79,7 @@
                         <div class="col-lg-4">
                             <h6>Overview</h6>
                             <div>
-                                OpenPO aims to help MSMEs(Micro, Small and Medium-sized Enterprises) to manage their PO (pre-order) business efficiently. As a UX designer, I am responsible for conducting user research, identifying problems, proposing solutions, and validating solutions. OpenPO is an ongoing project and is in its validating phase.
+                                OpenPO aims to help MSMEs(Micro, Small and Medium-sized Enterprises) to manage their PO (pre-order) business efficiently. As a UX designer, I am responsible for conducting user research, identifying problems, proposing solutions, and validating solutions. In this case study, you will find out the design process of the minimum viable product(MVP).
                             </div>
                         </div>
                     </div>
@@ -244,19 +244,18 @@
                     
                 </div>
             </section>
-            <section id="openpo_future_plan" class="hideme">
+            <section id="openpo_result" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-4">
-                            <h3 class="display-text">Future Plan</h3>
+                            <h3 class="display-text">Results</h3>
                         </div>
                         <div class="col-lg-6 offset-lg-2 m-3rem-t">
                             <p>
-                                It depends on the result of the validation plan. If we got more than 50% of people to sign up for our first release, we would proceed to implementation. Otherwise, we would conduct in-depth research to understand why people didn't sign up and adjust our plan accordingly.
+                                We have reached out 238 PO business owners, and got 127 of them signed up for our first release. With this result, we decided to proceed to the implementation.
                             </p>
                         </div>
                     </div>
-                    
                 </div>
             </section>
         </main>
