update zalora styleguide

--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -75,7 +75,7 @@
                                 <h6>Duration</h6>
                                 <div> 6 Months</div>
                                 <h6 class="m-1.5rem-t">Role</h6>
-                                <div>Design Technologist</div>
+                                <div>UX Engineer</div>
                                 <h6 class="m-1.5rem-t">Tools</h6>
                                 <div>ReactJs, HTML, CSS, SVG</div>
                             </div>
@@ -96,9 +96,13 @@
             <section id="zalora_my_role" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
-                        <div class="col">
-                            <h3>My Role</h3>
-                            <p>As a frontend developer on the team, I bring a frontend focus with HTML & CSS knowledge, seasoned skills to establish conventions and tool building. My responsibilities range from reviewing and auditing the as-is design and implementation, providing aid with frontend focus to ensure the design is scalable and reusable, contributing to the design system documentation.</p>
+                        <div class="col-lg-6">
+                            <img src="../img/zalora/desktop_mock.png"/>
+                        </div>
+                        <div class="col-lg-6">
+                            <h3>About Style</h3>
+                            <p>A fundamental struggle that has been plaguing ZALORA is the disjunction of its products and lack of cohesive system. Due to ZALORA’s organisation and its organic growth, teams have been historically working in silos, with each team creating their own UI, logic and UX patterns with little consensus and guidance holistically.</p>
+                            <p>Style is not only aimed to provide a joyful, enriching, unified experience to the customers but also ensures a low cost of changes and a balance between creativity and efficiency. Style isn’t just UI style guides, but also the way the team works and what are the team values and principles.</p>
                         </div>
                     </div>
                 </div>
@@ -125,14 +129,31 @@
                             <h3>Strategy</h3>
                         </div>
                         <div class="col-lg-6 m-3rem-t">
-                            <h5>System review</h5>
+                            <h5>
+                                Stakeholder Meetings
+                            </h5>
                             <p>
-                                We started the project by assessing as-is design assets, code libraries, documentation.
+                                Getting everyone on board at the beginning, and collaborating with them throughout the process is essential for the success of the project. Thus, before starting, I talked to the major stakeholders who might need to reference or update the system to understand what works well and what challenges could be solved.
                             </p>
-        
-                            <h5>Mission & Vision</h5>
+                            <h5>
+                                Foundations
+                            </h5>
+                            <p>Setting the foundations right before moving to the visual side is also important as it will speed up the later stage. 
+                            </p>
                             <p>
-                                The design system is not only aimed to provide a joyful, enriching, unified experience to the customers but also ensures a low cost of changes and a balance between creativity and efficiency.
+                                Firstly, I worked with the design team to settle down.
+                            </p>
+                            <h6>Tools</h6>
+                            <img src="../img/zalora/tools.png"/>
+                            <h6>Naming</h6>
+                            <p>
+                                To ensure effective communication between different teams, we followed some best naming rules used by the development team. For versioning, we followed the <a href="https://semver.org/">semantic versioning</a>. We also decided to name the components by their functionalities to guide and constraint the usage of the components, e.g. label--error instead of label--red. 
+                            </p>
+                            <h6>Documentation</h6>
+                            <p>We decided to keep all the documentation, research assets in google docs. As it's easily accessible by all teams, plus the team can provide inline and timely feedback. </p>
+                            <h5>UI Inventory</h5>
+                            <p>
+                                A UI inventory helped us easily identify problems and uncover information we didn’t know existed. It helped us to understand what components were used in the system repeatedly, and also accelerated the progress when we want to apply the new unified design to the products in the future stage.
                             </p>
                         </div>
                     </div>
@@ -144,7 +165,7 @@
                         <div class="col-lg-5">
                             <h3>Design, Code & Doc</h3>
                             <p>
-                                We delivered the components/elements progressively over sprints. We started by design and building the visual style (e.g., color, typography, and space), which was followed by UI components (e.g., Button, Tabs, Labels).
+                                We delivered the components/elements progressively over sprints. We started by designing and building the visual style (e.g., color, typography, and space), which was followed by UI components (e.g., Button, Tabs, Labels).
                             </p>
                         </div>
                     </div>
@@ -154,6 +175,9 @@
                             <h5 class="m-1rem-t">Data-driven Design</h5>
                             <p class="medium-dark-color">
                                 I looked for tracking data in Google Analytics that can be used to inform the design decisions. Based on the traffic from different platforms, we decided to adopt a mobile-first approach. We defined the breakpoints for the grid system by referencing the distribution of the screen sizes.
+                            </p>
+                            <p class="medium-dark-color">
+                                While designing, we followed some best practices to ensure the accessibility of the product. E.g. We used WCAG 2.0 guidelines for choosing and evaluating our color combinations, we used system font to ensure a smooth and native experience to the customers.
                             </p>
                         </div>
                         <div class="col-lg-4">
@@ -173,9 +197,9 @@
                             <div class="medium-dark-color">
                                 <p>There were two kinds of documentation being provided: the design guidelines, and the distribution guides.</p>
                                 <span>Design Guidelines</span>
-                                <p>The design guidelines include the general guides (e.g., principles of ZALORA product design, ZALORA's tone of voice that governed the whole design system), as well as the docs for individual components (e.g., the spec, usage in code and design, and suggested/anti patterns).</p>
+                                <p>The design guidelines include the general guide (e.g., principles of ZALORA product design, ZALORA's tone of voice that governed the whole design system), as well as the docs for individual components (e.g., the spec, usage in code and design, and suggested/anti-patterns).</p>
                                 <span>Distribution Guides</span>
-                                <p>The distribution guides is for developers who wants to distribute to the library. It includes the library structure, the conventions, tooling, etc.</p>
+                                <p>The distribution guide is for developers who want to distribute to the library. It includes the library structure, conventions, tooling, etc.</p>
                             </div>
                         </div>
                     </div>
