fix style of zalora

--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -96,13 +96,9 @@
             <section id="zalora_my_role" class="hideme">
                 <div class="container">
                     <div class="row m-6rem-t">
-                        <div class="col-lg-6">
-                            <img src="../img/zalora/desktop_mock.png"/>
-                        </div>
-                        <div class="col-lg-6">
-                            <h3>About Style</h3>
+                        <div class="">
                             <p>A fundamental struggle that has been plaguing ZALORA is the disjunction of its products and lack of cohesive system. Due to ZALORA’s organisation and its organic growth, teams have been historically working in silos, with each team creating their own UI, logic and UX patterns with little consensus and guidance holistically.</p>
-                            <p>Style is not only aimed to provide a joyful, enriching, unified experience to the customers but also ensures a low cost of changes and a balance between creativity and efficiency. Style isn’t just UI style guides, but also the way the team works and what are the team values and principles.</p>
+                            <p>Style is aimed <strong>to provide a joyful, enriching, unified experience to the customers, as well as to ensure a low cost of changes and a balance between creativity and efficiency</strong>. Style isn’t just UI style guides, but also the way the team works and what are the team values and principles.</p>
                         </div>
                     </div>
                 </div>
@@ -214,7 +210,7 @@
                 <div class="container">
                     <div class="row">
                         <h3>Workshops & Talks</h3>
-                        <p>In order to get more people to use our new design system, we held workshops and talks to market our design system. Our participants were not limited to developers, PMs, and designers. We also invited the QAs and content team marketing department.</p>
+                        <p>In order to get more people to use our new design system, we held workshops and talks to market our design system. Our participants were not limited to developers, PMs, and designers. We also invited the QAs and teams from marketing department.</p>
                         <br>
                         <p>Apart from holding workshops and talks to introduce the design system, as a developer, I also implemented a <a href="http://zalora.github.io/styleguide/#/playground">playground</a> as part of the documentation portal to encourage people to try the new design system without bothering setting up the development environment.</p>
                     </div>
