update openpo description

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <span class="badge openpo-bg">User Research</span>
                             <span class="badge openpo-bg">Mobile Design</span>
                             <span class="badge openpo-bg">Market Validation</span>
-                            <p class="m-1rem-t">OpenPO aims to help MSMEs(Micro, Small and Medium-sized Enterprises) to manage their PO (pre-order) business efficiently. As a UX designer, I am responsible for conducting user research, identifying problems, proposing solutions, and validating solutions. OpenPO is an ongoing project and is in its validating phase.</p>
+                            <p class="m-1rem-t">OpenPO aims to help MSMEs(Micro, Small and Medium-sized Enterprises) to manage their PO (pre-order) business efficiently. As a UX designer, I am responsible for conducting user research, identifying problems, proposing solutions, and validating solutions. OpenPO is going to be released on 24th Jul 2020.</p>
                             <a class="read-more-link openpo-color" href="static/pages/openpo.html">
                                 Read More
                                 <svg class="icon"><use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use></svg>
