update portfolio content

--- a/static/pages/autodesk.html
+++ b/static/pages/autodesk.html
@@ -92,7 +92,7 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-6">
-                            <h3>Research</h3>
+                            <h3 class="display-text">Research</h3>
                             <div class="medium-dark-color m-0rem-t">Due to the budget and timeline, I didn't have the luxury to recruit participants and conduct face-to-face user interviews. Instead, I did a competitive analysis and user research on the Autodesk users forum.</div>
                         </div>
                         <div class="col-lg-6 m-3rem-t">
@@ -115,7 +115,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5">
-                            <h3>Ideation</h3>
+                            <h3 class="display-text">Ideation</h3>
                             <div class="medium-dark-color m-0rem-t">I started the design by sketching some ideas.</div>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5">
-                            <h3>Design + Prototype</h3>
+                            <h3 class="display-text">Design + Prototype</h3>
                             <div class="medium-dark-color m-0rem-t">
                                 To get a more accurate result from usability testing, I decided to implement the designs with HTML, CSS, and JavaScript.
                             </div>
@@ -168,7 +168,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <h3>What's next</h3>
+                            <h3 class="display-text">What's next</h3>
                             <p>
                                 Due to the time constraint, I didn't involve in the testing phase and cannot further improve my design. However, there were some of the areas I wanted to focus: 1) version management, the expandable panel was one of the solutions, but I am wondering if the user was able to link the arrow icon with more versions. 2)  more information, I wanted to know if the information was sufficient, and if the presence of the information was easily digestible.
                             </p>
