--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -156,8 +156,8 @@
                     <div class="row justify-content-center m-2rem-t">
                         <div class="col">
                             <picture>
-                                <source srcset="../img/esplanade/docs.png" media="(min-width: 576px)">
-                                <img src="../img/esplanade/docs_sm.png" alt="screenshot of some of the analysis docs">
+                                <source srcset="../img/esplanade/research_docs.png" media="(min-width: 576px)">
+                                <img src="../img/esplanade/research_docs_sm.png" alt="screenshot of some of the analysis docs">
                             </picture>
                         </div>
                     </div>
@@ -235,6 +235,14 @@
                                     <h1>79%</h1> answers are chosen without backtracking
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center m-2rem-t">
+                        <div class="col">
+                            <picture>
+                                <source srcset="../img/esplanade/ia_docs.png" media="(min-width: 576px)">
+                                <img src="../img/esplanade/ia_docs_sm.png" alt="screenshot of some of the analysis docs">
+                            </picture>
                         </div>
                     </div>
                 </div>
