--- a/static/pages/openpo.html
+++ b/static/pages/openpo.html
@@ -138,15 +138,26 @@
                         </div>
                     </div>
                     <div class="row m-3rem-t">
-                        <div class="col-lg-4">
+                        <div class="col-lg-8 offset-lg-2">
                             <p class="medium-dark-color">
-                                After the interviews and surveys completed, I synthesized the raw data into a person and a journey map.
+                                I then came up with a persona that represented the user types we wanted to focus on and mapped out the journey map to better to understand the process that PO business owners go through and identify their needs and expectations.
                             </p>
                         </div>
                     </div>
                     <div class="row m-3rem-t">
                         <div class="col-lg-10 offset-lg-1">
                             <img src="../img/openpo/openpo_persona.png" alt="Persona of OpenPO">
+                        </div>
+                    </div>
+                    <div class="row m-3rem-t">
+                        <div class="col-lg-8 offset-lg-2">
+                            <p class="medium-dark-color">
+                                To align with the company's business strategy, and given that many PO business owners are satisfied with their current market size, I decided to focus on the process when the owners interact with their customers.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row m-3rem-t">
+                        <div class="col-lg-10 offset-lg-1">
                             <img src="../img/openpo/openpo_jm.png" alt="Journey map of persona sarah">
                         </div>
                     </div>
