--- a/static/pages/wap.html
+++ b/static/pages/wap.html
@@ -90,9 +90,7 @@
                 <div class="container m-6rem-t">
                     <div class="row m-3rem-t">
                         <div class="col-lg-6">
-                            <div class="section-title">
-                                <h3>Background</h3>
-                            </div>
+                            <h3 class="display-text">Background</h3>
                         </div>
                         <div class="col-lg-6">
                             <p>
@@ -107,9 +105,7 @@
                 <div class="container">
                     <div class="row m-6rem-t">
                         <div class="col-lg-6">
-                            <div class="section-title">
-                                <h3>Research</h3>
-                            </div>
+                            <h3 class="display-text">Research</h3>
                         </div>
                         <div class="col-lg-5 m-3rem-t">
                             <p>
@@ -127,9 +123,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5">
-                            <div class="section-title">
-                                <h3>Scenarios</h3>
-                            </div>
+                            <h3 class="display-text">Scenarios</h3>
                             <div class="m-1rem-t medium-dark-color m-0rem-t">There are 3 main user categories: admin, mail sender, mail approver.</div>
                         </div>
                     </div>
@@ -162,9 +156,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5">
-                            <div class="section-title">
-                                <h3>Design</h3>
-                            </div>
+                            <h3 class="display-text">Design</h3>
                             <div class="m-1rem-t medium-dark-color m-0rem-t">
                                 By following the design guidelines and user scenarios, I defined the key features and views to design.
                             </div>
@@ -204,7 +196,7 @@
                             <img src="../img/huemail/huemail_sender.png"/>
                         </div>
                     </div>
-                    <div class="row m-3rem-t">
+                    <div class="row m-6rem-t">
                         <div class="col-lg-7">
                             <img src="../img/huemail/huemail_approver.png"/>
                         </div>
@@ -221,7 +213,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5">
-                            <h3>Testing</h3>
+                            <h3 class="display-text">Testing</h3>
                         </div>
                         <div class="offset-lg-1 col-lg-6 m-3rem-t">
                             <h5> 
@@ -260,9 +252,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <div class="section-title">
-                                <h3>Result</h3>
-                            </div>
+                            <h3 class="display-text">Result</h3>
                             <p class="m-1rem-t">
                                 The Security Feature was released in September 2017.  And to recognize my contribution to the design and implementation, Works Applications reworded me as the star performer.  
                             </p>
