--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -77,7 +77,7 @@
                                 <h6 class="m-1.5rem-t">Role</h6>
                                 <div>UX Engineer</div>
                                 <h6 class="m-1.5rem-t">Tools</h6>
-                                <div>ReactJs, HTML, CSS, SVG</div>
+                                <div>ReactJs, HTML, CSS, SVG, Google Analytics, Sketch </div>
                             </div>
                             <div class="col-lg-4">
                                 <h6>Overview</h6>
@@ -137,7 +137,7 @@
                             <p>Setting the foundations right before moving to the visual side is also important as it will speed up the later stage. 
                             </p>
                             <p>
-                                Firstly, I worked with the design team to settle down.
+                                Firstly, I worked with the design team to settle down:
                             </p>
                             <h6>Tools</h6>
                             <img src="../img/zalora/tools.png"/>
@@ -213,6 +213,20 @@
                         <p>In order to get more people to use our new design system, we held workshops and talks to market our design system. Our participants were not limited to developers, PMs, and designers. We also invited the QAs and teams from marketing department.</p>
                         <br>
                         <p>Apart from holding workshops and talks to introduce the design system, as a developer, I also implemented a <a href="http://zalora.github.io/styleguide/#/playground">playground</a> as part of the documentation portal to encourage people to try the new design system without bothering setting up the development environment.</p>
+                    </div>
+                </div>
+            </section>
+            <section id="zalora_result" class="hideme">
+                <div class="container">
+                    <div class="row">
+                        <h3>Positive Results</h3>
+                        <p>The design system has had a positive impact on the website performance and development efficiency, at the time of writing (1 months since v1 launch).</p>
+                        <br>
+                        <ul>
+                            <li>The first meaningful paint of the mobile web homepage reduced almost 1s.</li>
+                            <li>The bounce rate of the mobile web homepage reduced 30%.</li>
+                            <li>The time of developing the frontend for the desktop and mobile websites reduced ~50% (estimated by the developers)</li>
+                        </ul>
                     </div>
                 </div>
             </section>
