--- a/static/pages/openpo.html
+++ b/static/pages/openpo.html
@@ -79,8 +79,7 @@
                         <div class="col-lg-4">
                             <h6>Overview</h6>
                             <div>
-                                OpenPO aims to help MSMEs(Micro, Small and Medium-sized Enterprises) to manage their PO (pre-order) business efficiently. As a UX designer, I am responsible for conducting user research, identifying problems, proposing solutions, and validating solutions. In this case study, you will find out the design process of the minimum viable product(MVP).
-                            </div>
+                                OpenPO aims to help MSMEs(Micro, Small, and Medium-sized Enterprises) to manage their PO (pre-order) business efficiently. In this project, I worked with PM (growth) and the local team in Indonesia. As a UX designer, I am responsible for conducting user research, identifying problems, proposing solutions, and validating solutions. In this case study, you will find out the design process of the minimum viable product(MVP).                            </div>
                         </div>
                     </div>
                 </div>
@@ -140,7 +139,7 @@
                     <div class="row m-3rem-t">
                         <div class="col-lg-8 offset-lg-2">
                             <p class="medium-dark-color">
-                                I then came up with a persona that represented the user types we wanted to focus on and mapped out the journey map to better to understand the process that PO business owners go through and identify their needs and expectations.
+                                I then came up with a persona representing the user types we wanted to focus on and mapped out the journey map to understand the process that PO business owners go through and identify their needs and expectations.
                             </p>
                         </div>
                     </div>
@@ -212,7 +211,11 @@
                         </div>
                         <div class="col-lg-8">
                             <img src="../img/openpo/openpo_lofi.png" alt="openpo wireframe">
-
+                        </div>
+                    </div>
+                    <div class="row m-3rem-t">
+                        <div class="col-lg-8 offset-lg-4">
+                            The content was designed based on the information we gathered from the user research (i.e. the FAQs from customers), requirement from courier companies, and payment service provider. 
                         </div>
                     </div>
                 </div>
