update CV, fixed CV button

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 Creating meaningful and delightful solutions through human-centred design.
                             </p>
                             <div class="p-2rem-tb">
-                                <button id="resume" class="m-btn m-btn-radius m-btn-t-theme" target="_blank" href="/CV_Yichang.pdf">Download CV</button>
+                                <a class="m-btn m-btn-radius m-btn-t-theme" target="_blank" role="button" href="CV_Yichang.pdf">Download CV</a>
                             </div>
                             <span class="text-center shake-vertical">
                                 <i class="fas fa-angle-double-down"></i>
