--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="col-lg-12 text-center section-title">
                         <object class="tagline-svg" type="image/svg+xml" data="static/img/tagline.svg"></object>
                         <p>
-                            Creating meaningful and delightful solutions through human-centred design.
+                            I create meaningful design with delightful experience.
                         </p>
                         <div class="p-2rem-tb">
                             <a class="m-btn m-btn-radius m-btn-t-theme" target="_blank" role="button"
@@ -113,7 +113,6 @@
                         </span>
                     </div>
                 </div>
-            </div>
 
         </section>
         <!-- End Intro Banner -->
@@ -125,10 +124,40 @@
                 </div>
             </div>
         </section>
-        <section id="projects_openpo">
+        <section id="projects_workspace">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5">
+                        <div class="project-img">
+                            <a class="project-img-depth" href="static/pages/workspace.html">
+                                <img src="static/img/workspace/cover_1.png" alt="teal bg">
+                                <img src="static/img/workspace/cover_2.png" alt="product image">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 offset-lg-1">
+                        <small>Released Project</small>
+                        <h3 class="m-0rem-t m-1rem-b">Workspace</h3>
+                        <span class="badge workspace-bg white-color">User Research</span>
+                        <span class="badge workspace-bg white-color">Web Design</span>
+                        <span class="badge workspace-bg white-color">Design System</span>
+                        <p class="m-1rem-t">Workspace is a web-based service where users can view, manage & analyze the
+                            measurement data. As a UX design, I worked closely with the PM to shape the project
+                            direction, ideate solutions and create user-centric design.</p>
+                        <a class="read-more-link workspace-color" href="static/pages/workspace.html">
+                            Read More
+                            <svg class="icon">
+                                <use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="projects_openpo">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 offset-lg-1 order-lg-last">
                         <div class="project-img">
                             <a class="project-img-depth" href="static/pages/openpo.html">
                                 <img src="static/img/openpo/cover_1.png" alt="yellow bg">
@@ -136,8 +165,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-6 offset-lg-1">
-                        <small>Ongoing Project</small>
+                    <div class="col-lg-6">
+                        <small>Released Project</small>
                         <h3 class="m-0rem-t m-1rem-b">OpenPO</h3>
                         <span class="badge openpo-bg">User Research</span>
                         <span class="badge openpo-bg">Mobile Design</span>
@@ -159,7 +188,7 @@
         <section id="projects_esplanade">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5 offset-lg-1 order-lg-last">
+                    <div class="col-lg-5">
                         <div class="project-img">
                             <a class="project-img-depth" href="static/pages/esplanade.html">
                                 <img src="static/img/esplanade/cover_1.png" alt="bg">
@@ -167,7 +196,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 offset-lg-1">
                         <small>Concept Project</small>
                         <h3 class="m-0rem-t m-1rem-b">Esplanade Website Redesign</h3>
                         <span class="badge esplanade-bg white-color">Information Architecture</span>
@@ -189,7 +218,7 @@
         <section id="projects_zalora">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 offset-lg-1 order-lg-last">
                         <div class="project-img">
                             <a class="project-img-depth" href="static/pages/zalora.html">
                                 <img src="static/img/zalora/cover_1.png" alt="bg">
@@ -197,7 +226,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-6 offset-lg-1">
+                    <div class="col-lg-6">
                         <small>Released Design System</small>
                         <h3 class="m-0rem-t m-1rem-b">Style</h3>
                         <span class="badge zalora-bg white-color">UX Patterns</span>
@@ -218,7 +247,7 @@
         <section id="projects_huemail">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5 offset-lg-1 order-lg-last">
+                    <div class="col-lg-5">
                         <div class="project-img">
                             <a class="project-img-depth" href="static/pages/wap.html">
                                 <img src="static/img/huemail/cover_1.png" alt="bg">
@@ -226,7 +255,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 offset-lg-1">
                         <small>Released Enterprise Web Application</small>
                         <h3 class="m-0rem-t m-1rem-b">Security Features</h3>
                         <span class="badge huemail-bg white-color">Enterprise System</span>
@@ -249,7 +278,7 @@
         <section id="projects_autodesk">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 offset-lg-1 order-lg-last">
                         <div class="project-img">
                             <a class="project-img-depth" href="static/pages/autodesk.html">
                                 <img src="static/img/autodesk/cover_1.png" alt="bg">
@@ -257,7 +286,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-6 offset-lg-1">
+                    <div class="col-lg-6 ">
                         <small>Released Desktop Application</small>
                         <h3 class="m-0rem-t m-1rem-b">WingMan </h3>
                         <span class="badge autodesk-bg">Interaction Design</span>
@@ -280,10 +309,10 @@
                     <h3 class="display-text">About Me</h3>
                 </div>
                 <div class="row align-items-center">
-                    <div class="col-lg-4">
-                        <img src="static/img/about.JPG" />
+                    <div class="col-lg-5">
+                        <img src="static/img/about.png" />
                     </div>
-                    <div class="offset-lg-2 col-lg-6">
+                    <div class="offset-lg-1 col-lg-6">
                         <h4>Hey! <svg class="icon theme-color">
                                 <use xlink:href="static/pages/symbol-defs.svg#icon-victory"></use>
                             </svg></h4>
@@ -291,7 +320,7 @@
                         <p>
                             I can code. I'm decent at systems and interaction design. I am curious about new
                             technologies and can pick up quickly. I've had experience conducting workshops and sharing
-                            sessions. I am known as "easy to work with". I love eating and cooking, and animals.
+                            sessions. When I am not working, you find me cooking for my friends or playing with my cat.
                         </p>
                     </div>
                 </div>
